RESOLVED FIXED291329
[CSS Tree Counting Functions] Invalidation
https://bugs.webkit.org/show_bug.cgi?id=291329
Summary [CSS Tree Counting Functions] Invalidation
Sam Weinig
Reported 2025-04-09 12:47:55 PDT
Fix support for shadow DOM use cases and implement proper invalidation.
Attachments
Sam Weinig
Comment 1 2025-04-09 12:52:09 PDT
Radar WebKit Bug Importer
Comment 2 2025-04-16 12:48:13 PDT
Sam Weinig
Comment 3 2025-04-23 10:17:23 PDT
The CSSWG resolved to use the DOM tree instead of the flat tree, so removing Shadow DOM aspect of this issue.
EWS
Comment 4 2025-04-24 07:24:17 PDT
Committed 294062@main (bc4b0a6362a4): <https://commits.webkit.org/294062@main> Reviewed commits have been landed. Closing PR #43855 and removing active labels.
Tim Nguyen (:ntim)
Comment 5 2025-07-15 14:29:23 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/53773
Note You need to log in before you can comment on or make changes to this bug.