[CSS Tree Counting Functions] Invalidation https://bugs.webkit.org/show_bug.cgi?id=291329 rdar://149410107

Reviewed by Ryosuke Niwa.

Ensures that that MatchedDeclarationsCache is disabled and sibling changes
invalidate the style when using CSS sibling tree counting functions().

* LayoutTests/imported/w3c/web-platform-tests/css/css-values/tree-counting/calc-sibling-function-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/tree-counting/calc-sibling-function-in-shadow-dom-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/tree-counting/calc-sibling-function.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/tree-counting/sibling-function-invalidation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/tree-counting/tree-scoped-sibling-function-expected.txt:
    - Update tests and results.

* Source/WebCore/rendering/style/RenderStyle.cpp:
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/StyleRareNonInheritedData.h:
* Source/WebCore/style/MatchedDeclarationsCache.cpp:
    - Adds flag to RenderStyle for when using tree counting functions
      and disable the MatchedDeclarationsCache when it is set.

* Source/WebCore/style/StyleBuilderState.cpp:
* Source/WebCore/style/StyleBuilderState.h:
    - Set the new RenderStyle flag for tree counting functions and set
      both ChildrenAffectedBy{Backward,Forward}PositionalRules flags
      on the parent element to ensure sibling changes invalidate the
      element's style. A more specific flag could be used in the future
      that only invalidates if the appropriate count/index changes, but
      that would require adding addition bits to m_styleBitfields which
      is already at capacity.

Canonical link: https://commits.webkit.org/294062@main