Source/WebCore/rendering/style/StyleRareNonInheritedData.h
@@ -284,6 +284,7 @@ public:
     unsigned scrollbarWidth : 2; // ScrollbarWidth
 
     unsigned usesAnchorFunctions : 1;
+    unsigned usesTreeCountingFunctions : 1;
 
 private:
     StyleRareNonInheritedData();
